[gd_scene load_steps=45 format=2]

[ext_resource path="res://Art/Minigame art/Recycle/bin_glass.png" type="Texture" id=1]
[ext_resource path="res://Art/Minigame art/Recycle/bin_organic.png" type="Texture" id=2]
[ext_resource path="res://Art/Minigame art/Recycle/bin_metal.png" type="Texture" id=3]
[ext_resource path="res://Art/Minigame art/Recycle/bin_paper.png" type="Texture" id=4]
[ext_resource path="res://Art/Minigame art/Recycle/bin_plastic.png" type="Texture" id=5]
[ext_resource path="res://Art/Minigame art/Recycle/bin_battery.png" type="Texture" id=6]
[ext_resource path="res://Art/Minigame art/Separate_image/store_recycle_game.jpg" type="Texture" id=8]
[ext_resource path="res://Art/Images/player/main_character_neutral.png" type="Texture" id=9]
[ext_resource path="res://Art/Minigame art/Recycle/pizza.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Minigames/Recycle/draggable_item.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Minigames/Recycle/Recycle.gd" type="Script" id=12]
[ext_resource path="res://Art/Minigame art/Recycle/water_bottle.png" type="Texture" id=13]
[ext_resource path="res://Art/Minigame art/Recycle/battery.png" type="Texture" id=14]
[ext_resource path="res://Art/Minigame art/Recycle/rotten_burger.png" type="Texture" id=15]
[ext_resource path="res://Art/Minigame art/Recycle/metal_can.png" type="Texture" id=16]
[ext_resource path="res://Art/Minigame art/Recycle/wine_bottle.png" type="Texture" id=17]
[ext_resource path="res://Art/Minigame art/Recycle/purple_can.png" type="Texture" id=18]
[ext_resource path="res://Art/Minigame art/Throwgarbage/paper ball.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sounds/correct_answer.mp3" type="AudioStream" id=20]
[ext_resource path="res://Assets/Sounds/wrong_answer.mp3" type="AudioStream" id=21]
[ext_resource path="res://Scenes/ScoreMessage.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/Minigames/Throwgarbage/Cat.tscn" type="PackedScene" id=24]
[ext_resource path="res://Art/CalibriSmall.tres" type="DynamicFont" id=25]
[ext_resource path="res://Art/Calibri Regular.ttf" type="DynamicFontData" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.5, 67 )

[sub_resource type="DynamicFont" id=15]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 26 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56, 67 )

[sub_resource type="DynamicFont" id=16]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 26 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.5, 68 )

[sub_resource type="DynamicFont" id=17]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 26 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 56, 68.5 )

[sub_resource type="DynamicFont" id=18]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 26 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 56, 68.5 )

[sub_resource type="DynamicFont" id=19]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 26 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 408, 390.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 151, 185 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 69, 136 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 113.5, 199 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 52.5, 92.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 545.5, 480.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 177.5, 416 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 170, 64.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 208, 191.5 )

[node name="Recycle" type="Node2D"]
z_index = 1
script = ExtResource( 12 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.482353, 0.482353, 0.482353, 1 )
position = Vector2( 959, 537.5 )
scale = Vector2( 0.933594, 0.929688 )
texture = ExtResource( 8 )

[node name="ScoreMessage" parent="." instance=ExtResource( 22 )]
position = Vector2( -936, -49 )

[node name="Character" type="Sprite" parent="."]
position = Vector2( 1732, 858 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Bins" type="Node2D" parent="."]
position = Vector2( 50, 0 )

[node name="Glass" type="Area2D" parent="Bins"]
position = Vector2( 160, 875 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Bins/Glass"]
position = Vector2( -4, -6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bins/Glass"]
position = Vector2( -4.5, -6 )
shape = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bins/Glass"]
margin_left = -29.0
margin_top = 27.5
margin_right = 26.0
margin_bottom = 48.5
custom_fonts/normal_font = SubResource( 15 )
text = "Glas"

[node name="Plastic" type="Area2D" parent="Bins"]
position = Vector2( 420, 871 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Bins/Plastic"]
position = Vector2( -3, -3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bins/Plastic"]
position = Vector2( -3, -3 )
shape = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bins/Plastic"]
margin_left = -41.0
margin_top = 31.0
margin_right = 26.0
margin_bottom = 67.0
custom_fonts/normal_font = SubResource( 16 )
text = "Plastic"

[node name="Organic" type="Area2D" parent="Bins"]
position = Vector2( 680, 857 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Bins/Organic"]
position = Vector2( -1, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bins/Organic"]
position = Vector2( -0.5, 4 )
shape = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bins/Organic"]
margin_left = -49.0
margin_top = 31.0
margin_right = 47.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 17 )
text = "Organisch"

[node name="Paper" type="Area2D" parent="Bins"]
position = Vector2( 940, 875 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Bins/Paper"]
position = Vector2( 0, -5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bins/Paper"]
position = Vector2( 0, -5.5 )
shape = SubResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bins/Paper"]
margin_left = -32.0
margin_top = 27.0
margin_right = 45.0
margin_bottom = 48.0
custom_fonts/normal_font = SubResource( 18 )
text = "Papier"

[node name="Rest" type="Area2D" parent="Bins"]
position = Vector2( 1200, 875 )
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Bins/Rest"]
position = Vector2( -2, -4 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bins/Rest"]
position = Vector2( -2, -4.5 )
shape = SubResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Bins/Rest"]
margin_left = -49.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 52.0
custom_fonts/normal_font = SubResource( 19 )
text = "Restafval"

[node name="Battery" type="Area2D" parent="Bins"]
position = Vector2( 1460, 877 )
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite2" type="Sprite" parent="Bins/Battery"]
position = Vector2( 0, -2 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bins/Battery"]
position = Vector2( 0, -0.5 )
shape = SubResource( 6 )

[node name="Items" type="Node2D" parent="."]

[node name="Pizza" type="Area2D" parent="Items"]
position = Vector2( 1554, 508 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/Pizza"]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Pizza"]
position = Vector2( 1, -2 )
shape = SubResource( 7 )

[node name="Bottle" type="Area2D" parent="Items"]
position = Vector2( 455, 484 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/Bottle"]
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Bottle"]
position = Vector2( -1, -3 )
shape = SubResource( 8 )

[node name="GreenCan" type="Area2D" parent="Items"]
position = Vector2( 1055, 453 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/GreenCan"]
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/GreenCan"]
position = Vector2( 0.5, -1 )
shape = SubResource( 9 )

[node name="PurpleCan" type="Area2D" parent="Items"]
position = Vector2( 692, 467 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/PurpleCan"]
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/PurpleCan"]
position = Vector2( 1.5, -5.5 )
shape = SubResource( 10 )

[node name="Burger" type="Area2D" parent="Items"]
position = Vector2( 881, 469 )
scale = Vector2( 0.15, 0.15 )
collision_layer = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/Burger"]
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Burger"]
position = Vector2( -15.5, -3.5 )
shape = SubResource( 11 )

[node name="Wine" type="Area2D" parent="Items"]
position = Vector2( 585, 467 )
scale = Vector2( 0.1, 0.2 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/Wine"]
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Wine"]
position = Vector2( -3.5, 1 )
shape = SubResource( 12 )

[node name="Battery" type="Area2D" parent="Items"]
position = Vector2( 1347, 491 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/Battery"]
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Battery"]
position = Vector2( 0, -0.5 )
shape = SubResource( 13 )

[node name="Paper" type="Area2D" parent="Items"]
position = Vector2( 1209, 501 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Items/Paper"]
texture = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items/Paper"]
position = Vector2( 1, 0.5 )
shape = SubResource( 14 )

[node name="Cat" parent="." instance=ExtResource( 24 )]
position = Vector2( 219, 495 )
scale = Vector2( 0.5, 0.5 )

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="SpeechBubble" parent="." instance=ExtResource( 23 )]
position = Vector2( 218, 86 )
scale = Vector2( 1.25, 1.25 )

[node name="Button" type="Button" parent="."]
margin_left = 932.0
margin_top = 368.0
margin_right = 1392.0
margin_bottom = 643.0
custom_fonts/font = ExtResource( 25 )
text = "Beginnen!"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="area_entered" from="Bins/Glass" to="." method="_on_GlassBin_area_entered"]
[connection signal="area_exited" from="Bins/Glass" to="." method="_on_GlassBin_area_exited"]
[connection signal="area_entered" from="Bins/Plastic" to="." method="_on_Plastic_area_entered"]
[connection signal="area_exited" from="Bins/Plastic" to="." method="_on_Plastic_area_exited"]
[connection signal="area_entered" from="Bins/Organic" to="." method="_on_Organic_area_entered"]
[connection signal="area_exited" from="Bins/Organic" to="." method="_on_Organic_area_exited"]
[connection signal="area_entered" from="Bins/Paper" to="." method="_on_Paper_area_entered"]
[connection signal="area_exited" from="Bins/Paper" to="." method="_on_Paper_area_exited"]
[connection signal="area_entered" from="Bins/Rest" to="." method="_on_Rest_area_entered"]
[connection signal="area_exited" from="Bins/Rest" to="." method="_on_Rest_area_exited"]
[connection signal="area_entered" from="Bins/Battery" to="." method="_on_Battery_area_entered"]
[connection signal="area_exited" from="Bins/Battery" to="." method="_on_Battery_area_exited"]
[connection signal="input_event" from="Items/Pizza" to="Items/Pizza" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/Bottle" to="Items/Bottle" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/GreenCan" to="Items/GreenCan" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/PurpleCan" to="Items/PurpleCan" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/Burger" to="Items/Burger" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/Wine" to="Items/Wine" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/Battery" to="Items/Battery" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Items/Paper" to="Items/Paper" method="_on_Area2D_input_event"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
